# koans

./: #mlir.rkt#  .gitignore  1-hm.hs  1-linty.hs  README.md  ad.hs  arrow.hs  card-draw-trick.py  coc-in-agda.agda  coc-in-agda.agdai  coend.hs  cont-forall-r.hs  cont.hs  deps.edn  discrete-diffgeo.cpp  dsl.hs  fenwick.cpp  fenwick.py  final-tagless.hs  forall-exists.hs  hoare.hs  hoare.lhs  interval.hs  lcf.hs  lens.hs  lob.hs  makefile  mlir.rkt  monad-transformers.hs  more-free.hs  nbe.hs  nbe2.hs  observer-pattern.hs  parser-trifecta.hs  parser.hs  permutations-combinations.hs  projections.cs  provenance.hs  qsort.hs  rank-suffixes-nlogsqn.hs  (+14 more)
bound/: Bound  Bound.hi  Bound.lhs  CHANGELOG.md  bound.cabal  makefile
bound/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
cellular/: CHANGELOG.md  Cellular.lhs  cellular.html  functionalworks.cabal  header.html  imports.hs
cox-little-oshea/: ch2.cpp
divisible-decidable/: CHANGELOG.md  Main.lhs  article.md  divisible-decidable.cabal
finger-tree/: README.md  ft0.hs  ft1.hs  ft2.hs  ft3.hs  ft4.hs  ft5.hs
intro-haskell/: lesson-1.hs  lesson-2.hs  load-ghci.sh  vector-space.hs
laziness-for-imperative-programmers/: README.md
src/: bidirectional.clj
