cabal-version:      2.4
name:               divisible-decidable
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             siddu.druid@gmail.com
maintainer:         siddu.druid@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable divisible-decidable
    main-is:          Main.lhs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    		      , contravariant
    hs-source-dirs:   .
    default-language: Haskell2010
